@@ -1,9 +1,12 @@
 package com.aston.shop.users.service;
 
 import com.aston.shop.users.entity.User;
+import com.aston.shop.users.excetions.UserNotFoundException;
 import com.aston.shop.users.repository.UserRepository;
 import com.aston.shop.users.service.impl.UserServiceImpl;
+import com.aston.shop.users.utils.DataUtils;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -11,7 +14,6 @@ import org.mockito.MockitoAnnotations;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -21,7 +23,6 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -39,104 +40,97 @@ class UserServiceImplTest {
 	}
 
 	@Test
-	void testExistsByUsername() {
-		when(userRepository.existsByUsername("existingUser")).thenReturn(true);
-		when(userRepository.existsByUsername("nonExistingUser")).thenReturn(false);
+	@DisplayName("Test Check existence by username for existing and non-existing users")
+	void givenExistingAndNonExistingUser_whenCheckExistsByUsername_thenVerifyBehavior() {
+		// given
+		String existingUser = "existingUser";
+		String nonExistingUser = "nonExistingUser";
+		when(userRepository.existsByUsername(existingUser)).thenReturn(true);
+		when(userRepository.existsByUsername(nonExistingUser)).thenThrow(UsernameNotFoundException.class);
 
-		assertTrue(userService.existsByUsername("existingUser"));
-		assertFalse(userService.existsByUsername("nonExistingUser"));
+		// when
+		boolean exists = userService.existsByUsername(existingUser);
 
-		verify(userRepository, times(1)).existsByUsername("existingUser");
-		verify(userRepository, times(1)).existsByUsername("nonExistingUser");
+		// then
+		assertTrue(exists);
+		assertThrows(UsernameNotFoundException.class, () -> userService.existsByUsername(nonExistingUser));
+		verify(userRepository).existsByUsername(existingUser);
+		verify(userRepository).existsByUsername(nonExistingUser);
 	}
 
 	@Test
-	void testExistsByEmail() {
-		when(userRepository.existsByEmail("existing@example.com")).thenReturn(true);
-		when(userRepository.existsByEmail("nonExisting@example.com")).thenReturn(false);
+	@DisplayName("Test Check existence by email for existing and non-existing emails")
+	void givenExistingAndNonExistingEmail_whenCheckExistsByEmail_thenVerifyBehavior() {
+		// given
+		String existingEmail = "existing@example.com";
+		String nonExistingEmail = "nonExisting@example.com";
+		when(userRepository.existsByEmail(existingEmail)).thenReturn(true);
+		when(userRepository.existsByEmail(nonExistingEmail)).thenThrow(UserNotFoundException.class);
 
-		assertTrue(userService.existsByEmail("existing@example.com"));
-		assertFalse(userService.existsByEmail("nonExisting@example.com"));
+		// when
+		boolean emailExists = userService.existsByEmail(existingEmail);
 
-		verify(userRepository, times(1)).existsByEmail("existing@example.com");
-		verify(userRepository, times(1)).existsByEmail("nonExisting@example.com");
+		// then
+		assertTrue(emailExists);
+		assertThrows(UserNotFoundException.class, () -> userService.existsByEmail(nonExistingEmail));
+		verify(userRepository).existsByEmail(existingEmail);
+		verify(userRepository).existsByEmail(nonExistingEmail);
 	}
 
 	@Test
-	void testFindAll() {
-		User user = new User();
-		when(userRepository.findAll()).thenReturn(Collections.singletonList(user));
+	@DisplayName("Test Retrieve all users with USER role")
+	void whenFindAllUserRole_thenCorrectUsersRetrieved() {
+		// given
+		User user = DataUtils.getMichaelTransient();
+		User johnTransient = DataUtils.getJohnTransient();
+		when(userRepository.findAll()).thenReturn(List.of(user, johnTransient));
 
-		List<User> result = userService.findAll();
-		assertEquals(1, result.size());
-		assertSame(user, result.get(0));
+		// when
+		List<User> users = userService.findAllUserRole();
 
-		verify(userRepository, times(1)).findAll();
+		// then
+		assertEquals(2, users.size());
+		assertSame(user, users.get(0));
+		assertSame(johnTransient, users.get(1));
+		verify(userRepository).findAll();
 	}
 
 	@Test
-	void testFindById() {
-		User user = new User();
+	@DisplayName("Test Find user by ID and handle user not found")
+	void givenUserId_whenFindById_thenCorrectUserFoundOrHandled() throws UserNotFoundException {
+		// given
+		User user = DataUtils.getMichaelPersisted();
 		when(userRepository.findById(1L)).thenReturn(Optional.of(user));
 		when(userRepository.findById(2L)).thenReturn(Optional.empty());
 
-		Optional<User> result1 = userService.findById(1L);
-		assertTrue(result1.isPresent());
-		assertSame(user, result1.get());
+		// when
+		Optional<User> foundUser = userService.findById(1L);
+		Optional<User> notFoundUser = userService.findById(2L);
 
-		Optional<User> result2 = userService.findById(2L);
-		assertFalse(result2.isPresent());
-
-		verify(userRepository, times(1)).findById(1L);
-		verify(userRepository, times(1)).findById(2L);
+		// then
+		assertFalse(notFoundUser.isPresent());
+		verify(userRepository).findById(1L);
+		verify(userRepository).findById(2L);
+		assertTrue(foundUser.isPresent());
+		assertSame(user, foundUser.get());
 	}
 
 	@Test
-	void testFindByUsername() {
-		User user = new User();
-		when(userRepository.findOneByUsername("existingUser")).thenReturn(Optional.of(user));
+	@DisplayName("Test Find existing user by username and handle non-existing user error")
+	void givenUsername_whenFindByUsername_thenCorrectUserDetailsOrError() {
+		// given
+		User user = DataUtils.getAnnaTransient();
+		when(userRepository.findOneByUsername(user.getUsername())).thenReturn(Optional.of(user));
 		when(userRepository.findOneByUsername("nonExistingUser")).thenReturn(Optional.empty());
 
-		UserDetails result1 = userService.findByUsername("existingUser");
-		assertNotNull(result1);
-
+		// when
+		UserDetails userDetails = userService.findByUsername(user.getUsername());
 		assertThrows(UsernameNotFoundException.class, () -> userService.findByUsername("nonExistingUser"));
 
-		verify(userRepository, times(1)).findOneByUsername("existingUser");
-		verify(userRepository, times(1)).findOneByUsername("nonExistingUser");
+		// then
+		assertNotNull(userDetails);
+		verify(userRepository).findOneByUsername(user.getUsername());
+		verify(userRepository).findOneByUsername("nonExistingUser");
 	}
 
-	@Test
-	void testUserDetailsService() {
-		User user = new User();
-		when(userRepository.findOneByUsername("existingUser")).thenReturn(Optional.of(user));
-
-		UserDetails result = userService.userDetailsService().loadUserByUsername("existingUser");
-		assertNotNull(result);
-
-		verify(userRepository, times(1)).findOneByUsername("existingUser");
-	}
-
-	@Test
-	void testUpdate() {
-		User user = new User();
-		userService.update(user);
-
-		verify(userRepository, times(1)).saveAndFlush(user);
-	}
-
-	@Test
-	void testSave() {
-		User user = new User();
-		userService.save(user);
-
-		verify(userRepository, times(1)).save(user);
-	}
-
-	@Test
-	void testDeleteById() {
-		userService.deleteById(1L);
-
-		verify(userRepository, times(1)).deleteById(1L);
-	}
 }
